--- a/warp_server/Cargo.toml
+++ b/warp_server/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 warp = "0.3.7"
+pretty_env_logger = "0.4"
+log = "0.4"
+serde = { version = "1.0", features = ["derive"] }
