feat: update watch command in Makefile to include auto-formatting

--- a/warp_server/Makefile
+++ b/warp_server/Makefile
@@ -21,7 +21,7 @@ clean:
 
 # Command to keep server reloading upon save
 watch:
-	cargo watch -q -c -w src/ -x 'run'
+	cargo watch -q -c -w src/ -x 'fmt' -x 'run'
 
 # Command to auto reformat the code
 fmt:
