--- a/warp_server/Cargo.toml
+++ b/warp_server/Cargo.toml
@@ -9,3 +9,5 @@ warp = "0.3.7"
 pretty_env_logger = "0.4"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
+uuid = { version = "1.0", features = ["v4","serde"] }
+rand = "0.8"
